--- a/ChatBot/app/src/main/AndroidManifest.xml
+++ b/ChatBot/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest package="com.docsapp.test.chatbot"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:windowSoftInputMode="adjustResize"
         android:allowBackup="true"
